<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Allgemeine Informationen -->
    <string name="app_name">ShareNow</string>
    <string name="title_section1">Search</string>
    <string name="title_section2">Rent Out</string>
    <string name="title_section3">Profile</string>

    <!-- Login Menü in der Action Bar -->
    <string name="actionbar_menu_title">Login</string>
    <string name="actionbar_menu_greeting">Hello</string>
    <string name="actionbar_menu_profile">Profile</string>
    <string name="actionbar_menu_logout">Logout</string>

    <!-- Login Fragment -->
    <string name="profile_login_title">Login</string>
    <string name="profile_login_mail">E-Mail</string>
    <string name="profile_login_password">Password</string>
    <string name="profile_login_button">Login</string>
    <string name="profile_login_popup_text">Invalid mail or password.</string>
    <string name="profile_login_popup_ok">OK</string>
    <string name="profile_register_button">Register</string>
    <!-- Profile Fragment -->
    <string name="profile_view_places_button">Show Places</string>
    <string name="profile_view_own_reservations_button">Show Reservations</string>
    <string name="profile_view_place_reservations_button">Show Place Uses</string>

    <!-- Register Aktivität -->
    <string name="register_title">Register</string>
    <string name="register_mail">E-Mail</string>
    <string name="register_password">Password</string>
    <string name="register_firstName">First Name</string>
    <string name="register_lastName">Last Name</string>
    <string name="register_register_button">Register</string>
    <string name="register_popup_text">E-Mail address already in use.</string>
    <string name="register_popup_ok">OK</string>

    <!-- RentOut Fragment -->
    <string name="rentout_text">Please enter the details of your parking spot.</string>
    <string name="rentout_address">Address</string>
    <string name="rentout_description">Description</string>
    <string name="rentout_price">Price per hour in Euro</string>
    <string name="rentout_slot_title">Availability</string>
    <string name="rentout_slot_begin">From</string>
    <string name="rentout_slot_end">Until</string>
    <string name="rentout_slot_once">Once</string>
    <string name="rentout_slot_weekly">Weekly</string>
    <string name="rentout_slot_time">Time</string>
    <string name="rentout_slot_date">Date</string>
    <string name="rentout_image_title">Image</string>
    <string name="rentout_image_change">Change</string>
    <string name="rentout_image_reset">Reset</string>
    <string name="rentout_image_content_description">Image of the parking spot.</string>
    <string name="rentout_button">Rent Out</string>
    <string name="rentout_popup_text">Please login first.</string>
    <string name="rentout_popup_ok">OK</string>

    <!-- Search Fragment -->
    <string name="search_quick_title">Quick Search</string>
    <string name="search_quick_description">Find a parking place near you for the specified number of hours.</string>
    <string name="search_quick_button">Quick Search</string>
    <string name="search_advanced_title">Advanced Search</string>
    <string name="search_advanced_slot_begin">From</string>
    <string name="search_advanced_slot_end">Until</string>
    <string name="search_advanced_slot_time">Time</string>
    <string name="search_advanced_slot_date">Date</string>
    <string name="search_advanced_address">Address</string>
    <string name="search_advanced_distance">Maximum distance in kilometres</string>
    <string name="search_advanced_button">Advanced Search</string>
    <string name="search_popup_text">Location not found.</string>
    <string name="search_popup_ok">OK</string>

    <!-- Map Activity -->
    <string name="map_title">Results</string>
    <string name="map_nothing_found_popup_text">No Results.</string>
    <string name="map_nothing_found_popup_ok">OK</string>
    <string name="map_in_use_title">Currently Not Available</string>
    <string name="map_in_use_text_1">Occupied until</string>
    <string name="map_in_use_text_2">This spot is already occupied, sorry.</string>
    <string name="map_infowindow_title">Available!</string>
    <string name="book_dialog_image_descriptor">Spot picture</string>
    <string name="book_dialog_button">Book!</string>
    <string name="book_dialog_price">Price:</string>
    <string name="book_dialog_confirmation_title">Thank You!</string>
    <string name="book_dialog_confirmation_text_1">The address (</string>
    <string name="book_dialog_confirmation_text_2">) has been copied to your clipboard.</string>
    <string name="book_dialog_confirmation_ok">OK</string>

</resources>