<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="107dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="de.tum.asp.sharenow.app.MainActivity$PlaceholderFragment" >

        <TextView
            android:id="@+id/rentout_address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rentout_address" />

        <EditText
            android:id="@+id/rentout_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_address_text"
            android:layout_centerHorizontal="true"
            android:inputType="textPostalAddress"
            android:text="Arcisstraße 21, 80333 München" />

        <TextView
            android:id="@+id/rentout_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_address_input"
            android:paddingTop="10dp"
            android:text="@string/rentout_description" />

        <EditText
            android:id="@+id/rentout_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_description_text"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:text="next to university" />

        <TextView
            android:id="@+id/rentout_slot_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_description_input"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_title" />

        <TextView
            android:id="@+id/rentout_slot_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_slot_title"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_begin" />

        <TextView
            android:id="@+id/rentout_slot_begin_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rentout_slot_title"
            android:clickable="true"
            android:onClick="pickTime"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_time" />

        <TextView
            android:id="@+id/rentout_slot_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_slot_title"
            android:layout_toLeftOf="@id/rentout_slot_begin_time"
            android:clickable="true"
            android:onClick="pickDate"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_date" />

        <TextView
            android:id="@+id/rentout_slot_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_slot_begin"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_end" />

        <TextView
            android:id="@+id/rentout_slot_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rentout_slot_begin"
            android:clickable="true"
            android:onClick="pickTime"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_time" />

        <TextView
            android:id="@+id/rentout_slot_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_slot_begin"
            android:layout_toLeftOf="@id/rentout_slot_end_time"
            android:clickable="true"
            android:onClick="pickDate"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_slot_date" />

        <RadioGroup
            android:id="@+id/rentout_slot_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_slot_end"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rentout_slot_once_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rentout_slot_once" />

            <RadioButton
                android:id="@+id/rentout_slot_regularly_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rentout_slot_weekly" />
        </RadioGroup>

        <TextView
            android:id="@+id/rentout_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_slot_button_group"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rentout_image_title" />

        <ImageView
            android:id="@+id/rentout_image"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_below="@id/rentout_image_text"
            android:background="@color/actionBarBackground"
            android:contentDescription="@string/rentout_image_content_description"
            android:onClick="selectImage"
            android:scaleType="fitCenter"
            android:src="@drawable/no_picture" />

        <Button
            android:id="@+id/rentout_image_reset_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rentout_image"
            android:onClick="resetImage"
            android:text="@string/rentout_image_reset" />

        <TextView
            android:id="@+id/rentout_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_image_reset_button"
            android:paddingTop="10dp"
            android:text="@string/rentout_price" />

        <EditText
            android:id="@+id/rentout_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_price_text"
            android:inputType="numberDecimal"
            android:text="1.5" />

        <Button
            android:id="@+id/rentout_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rentout_price_input"
            android:layout_centerHorizontal="true"
            android:onClick="rentOut"
            android:paddingTop="10dp"
            android:text="@string/rentout_button" />
    </RelativeLayout>

</ScrollView>