<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <ImageView
        android:id="@+id/book_dialog_image"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/book_dialog_image_descriptor"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:src="@drawable/no_picture" />

    <TextView
        android:id="@+id/book_dialog_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/book_dialog_image"
        android:padding="5dp"
        android:text="@string/book_dialog_price" />

    <TextView
        android:id="@+id/book_dialog_price_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:padding="5dp" />

    <TextView
        android:id="@+id/book_dialog_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_dialog_price"
        android:layout_toRightOf="@id/book_dialog_image"
        android:padding="5dp" />

    <Button
        android:id="@+id/book_dialog_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/book_dialog_image"
        android:padding="5dp"
        android:text="@string/book_dialog_button" />

</RelativeLayout>