<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    tools:context="de.tum.asp.sharenow.app.RegisterActivity" >

    <TextView
        android:id="@+id/register_mail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/register_mail" />
    
    <EditText
        android:id="@+id/register_mail_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_mail_text"
        android:layout_centerHorizontal="true"
        android:text="jd@example.com"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:id="@+id/register_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_mail_input"
        android:paddingTop="10dp"
        android:text="@string/register_password" />
        
    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_text"
        android:layout_centerHorizontal="true"
        android:text="hallo"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/register_firstName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:paddingTop="10dp"
        android:text="@string/register_firstName" />
    
    <EditText
        android:id="@+id/register_firstName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_firstName_text"
        android:layout_centerHorizontal="true"
        android:text="John"
        android:inputType="textPersonName" />
    
    <TextView
        android:id="@+id/register_lastName_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_firstName_input"
        android:paddingTop="10dp"
        android:text="@string/register_lastName" />
    
    <EditText
        android:id="@+id/register_lastName_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_lastName_text"
        android:layout_centerHorizontal="true"
        android:text="Doe"
        android:inputType="textPersonName" />
    
    <Button
        android:id="@+id/register_register_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_lastName_input"
        android:layout_centerHorizontal="true"
        android:text="@string/register_register_button" 
        android:onClick="register" />

</RelativeLayout>
